code improvement fix bugs Signed-off-by: dbulahov <bulahovdenis@gmail.com>